# platform-hardware-qcom-display

./: Android.bp  Android.mk  Makefile.am  common.mk  configure.ac
composer/: Android.mk  display_null.h  hwc_buffer_allocator.cpp  hwc_callbacks.cpp  hwc_callbacks.h  hwc_display.cpp  hwc_display.h  hwc_display_builtin.cpp  hwc_display_builtin.h  hwc_layers.cpp  hwc_session.cpp  hwc_session.h  hwc_session_services.cpp  vendor.qti.hardware.display.composer-service.xml
config/: display-product.mk  talos.mk
gpu_tonemapper/: Android.mk  EGLImageBuffer.cpp  EGLImageBuffer.h  EGLImageBufferBase.cpp  EGLImageBufferBase.h  EGLImageBufferLE.cpp  EGLImageBufferLE.h  EGLImageWrapper.cpp  EGLImageWrapperLE.cpp  EGLImageWrapperLE.h  Tonemapper.cpp  TonemapperLE.cpp  TonemapperLE.h  engine.h  glengine.cpp  glengine.h  rgba_inverse_tonemap.inl
gralloc/: Android.mk  Makefile.am  gr_adreno_info.cpp  gr_adreno_info.h  gr_allocator.cpp  gr_allocator.h  gr_buf_descriptor.h  gr_buf_mgr.cpp  gr_buf_mgr.h  gr_device_impl.cpp  gr_device_impl.h  gr_ion_alloc.cpp  gr_utils.cpp  gr_utils.h
hdmi_cec/: Android.mk  qhdmi_cec.cpp  qhdmi_cec.h
hdmi_cec_unit_test/: Android.mk  hdmi_cec_unit_test.cpp
include/: Android.mk  color_metadata.h  display_properties.h  gr_types.h
libcopybit/: Android.mk
libdisplayconfig/: Android.mk  DisplayConfig.h  Makefile.am  displayconfig.c  displayconfig.h
libdrmutils/: Makefile.am  drm_interface.h  drm_master.cpp  drm_master.h
libgralloc/: Android.mk  alloc_controller.cpp  gralloc_priv.h  mapper.cpp
libgralloc1/: Makefile.am  gr_adreno_info.cpp  gr_allocator.cpp  gr_allocator.h  gr_buf_mgr.cpp  gr_device_impl.cpp  gr_device_impl.h  gr_ion_alloc.cpp  gr_priv_handle.h  gr_utils.cpp
libhwcomposer/: hwc.cpp  hwc_copybit.cpp  hwc_copybit.h  hwc_mdpcomp.cpp  hwc_mdpcomp.h  hwc_qclient.cpp  hwc_uevents.cpp  hwc_utils.cpp  hwc_utils.h
liblight/: lights.c
libmemtrack/: kgsl.c
liboverlay/: overlayUtils.h
libqdutils/: Android.mk  display_config.cpp  display_config.h  qdMetaData.cpp  qdMetaData.h  qd_utils.cpp
libqservice/: Android.mk  IQService.cpp  IQService.h  Makefile.am  QServiceUtils.h
sde-drm/: Makefile.am  drm_connector.cpp  drm_plane.cpp  drm_plane.h
sdm/: CMakeLists.txt
sdm/include/core/: buffer_allocator.h  core_interface.h  display_interface.h  layer_buffer.h  layer_stack.h  sdm_types.h
sdm/include/private/: color_interface.h  color_params.h  dpps_control_interface.h  extension_interface.h  hw_info_types.h  resource_interface.h  strategy_interface.h
sdm/include/utils/: sys.h
sdm/libs/core/: Android.mk  Makefile.am  color_manager.cpp  color_manager.h  comp_manager.cpp  comp_manager.h  core_impl.cpp  core_impl.h  display_base.cpp  display_base.h  display_builtin.cpp  display_builtin.h  display_hdmi.cpp  display_hdmi.h  display_pluggable.cpp  display_primary.cpp  display_primary.h  display_virtual.cpp  display_virtual.h  dpps_control_default.h  hw_events_interface.cpp  hw_events_interface.h  hw_info_interface.cpp  hw_info_interface.h  hw_interface.cpp  hw_interface.h  resource_default.cpp  (+3 more)
sdm/libs/utils/: Android.mk  CMakeLists.txt  Makefile.am  debug.cpp  formats.cpp
(+65 files in other folders)
